correction des métriques et de la couverture des tests