@@ -402,7 +402,7 @@ public class WorkflowActiveRegistry implements WorkflowListener {
                 .filter(s -> userFilter == null || userFilter.equals(s.userId()))
                 .sorted(Comparator.comparing(WorkflowSnapshot::startTime).reversed())
                 .map(this::injectChunks)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /** Number of entries currently tracked. Mostly useful for tests + health. */
@@ -519,9 +519,12 @@ public class WorkflowActiveRegistry implements WorkflowListener {
                 .toList();
     }
 
+    private static final String STATUS_RUNNING = "RUNNING";
+    private static final String STATUS_IDLE = "IDLE";
+
     private static WorkerSnapshot buildWorkerSnapshot(String name, List<ChunkSnapshot> entries) {
         ChunkSnapshot running = entries.stream()
-                .filter(c -> "RUNNING".equals(c.status()))
+                .filter(c -> STATUS_RUNNING.equals(c.status()))
                 .findFirst().orElse(null);
 
         ChunkSnapshot lastFinished = entries.stream()
@@ -559,7 +562,7 @@ public class WorkflowActiveRegistry implements WorkflowListener {
                 .max(Comparator.naturalOrder())
                 .orElse(null);
 
-        String status        = running != null ? "RUNNING" : "IDLE";
+        String status        = running != null ? STATUS_RUNNING : STATUS_IDLE;
         Integer currentChunk = running != null ? running.chunkIndex() : null;
         long curProcessed    = running != null ? running.recordsProcessed() : 0L;
         long curTotal        = running != null ? running.recordsTotal()     : 0L;
@@ -599,7 +602,7 @@ public class WorkflowActiveRegistry implements WorkflowListener {
      * {@link WorkerSnapshot} at read time .
      */
     static final class StageWorkerStat {
-        volatile String  status = "IDLE";
+        volatile String  status = STATUS_IDLE;
         volatile Integer currentChunk;
         volatile long    currentRecordsProcessed;
         volatile long    currentRecordsTotal;
@@ -610,7 +613,7 @@ public class WorkflowActiveRegistry implements WorkflowListener {
 
         synchronized void recordEnd(Long durationMs) {
             chunksDone++;
-            status = "IDLE";
+            status = STATUS_IDLE;
             currentChunk = null;
             currentRecordsProcessed = 0L;
             currentRecordsTotal = 0L;
@@ -656,7 +659,7 @@ public class WorkflowActiveRegistry implements WorkflowListener {
                 .computeIfAbsent(corrId, k -> new ConcurrentHashMap<>())
                 .put(e.chunkIndex(), new ChunkSnapshot(
                         e.chunkIndex(),
-                        "RUNNING",
+                        STATUS_RUNNING,
                         0L,
                         e.recordsExpected(),
                         e.workerName(),
@@ -717,11 +720,11 @@ public class WorkflowActiveRegistry implements WorkflowListener {
         if (corrId == null) return;
         ConcurrentMap<String, StageWorkerStat> sources = sourceWorkersByCid.get(corrId);
         if (sources != null) {
-            sources.values().forEach(w -> { w.status = "IDLE"; w.currentChunk = null; });
+            sources.values().forEach(w -> { w.status = STATUS_IDLE; w.currentChunk = null; });
         }
         ConcurrentMap<String, StageWorkerStat> sinks = sinkWorkersByCid.get(corrId);
         if (sinks != null) {
-            sinks.values().forEach(w -> { w.status = "IDLE"; w.currentChunk = null; });
+            sinks.values().forEach(w -> { w.status = STATUS_IDLE; w.currentChunk = null; });
         }
     }
 
@@ -759,9 +762,9 @@ public class WorkflowActiveRegistry implements WorkflowListener {
                                           long nowMs) {
         if (workers == null) return;
         for (StageWorkerStat w : workers.values()) {
-            if (!"RUNNING".equals(w.status)) continue;
-            if (w.lastActivity == null) continue;
-            if (nowMs - w.lastActivity.toEpochMilli() > STALE_RUNNING_RESET_MS) {
+            if (STATUS_RUNNING.equals(w.status)
+                    && w.lastActivity != null
+                    && nowMs - w.lastActivity.toEpochMilli() > STALE_RUNNING_RESET_MS) {
                 w.status = "IDLE";
                 w.currentChunk = null;
                 w.currentRecordsProcessed = 0L;
